Fix github repository link text and icon not being horizontally aligned

--- a/modules/react-components/src/components/documentation/documentation-link.scss
+++ b/modules/react-components/src/components/documentation/documentation-link.scss
@@ -17,7 +17,7 @@
  */
 
 .documentation-link {
-    display: inline-flex;
+    display: inline;
     align-items: center;
 
     .documentation-icon {
